Fix project title input placeholder text in dark mode

--- a/src/components/menu-bar/project-title-input.css
+++ b/src/components/menu-bar/project-title-input.css
@@ -27,7 +27,8 @@ can set a width for example or what it should do in a flex box (eg. grow).
 }
 
 .title-field::placeholder {
-    color: $ui-white;
+    color: $menu-bar-foreground;
+    opacity: 0.8;
     font-weight: normal;
     font-size: .8rem;
     font-style: italic;
